feat(booking): impl booking update/delete w role-based access control 11/4